# -No-copy-IPC

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CrashPoints.cpp  CrashPoints.h  Doc.docx  GlobalConfig.cpp  GlobalConfig.h  Makefile  Pathes.cpp  README.md  TestGcc.cc  a.out  cmake_install.cmake
bck/: MemWrapper.cpp  SimpleFreeList.cpp  SimpleFreeList.h
comm/: CMakeLists.txt  CmmQueue.cpp  CmmQueue.h  Makefile  cmake_install.cmake
debug/: CMakeLists.txt  Makefile  ShowCells.cpp  cmake_install.cmake
docs/: SHMIPC.docx  queue.docx  test5_1.docx
freelist/: CMakeLists.txt  CellBlock.cpp  CellBlock.h  GlobalFreeList.cpp  GlobalFreeList.h  LocalFreeList.cpp  LocalFreeList.h  Makefile  SimpleFreeList.h  TestTmp.cpp  cmake_install.cmake
monitor/: CMakeLists.txt  Makefile  Monitor.cpp  Monitor.h  cmake_install.cmake
proxy/: AppProxy.cpp  AppProxy.h  AppProxyInitException.cpp  AppProxyInitException.h  CMakeLists.txt  Makefile  cmake_install.cmake
shm/: CMakeLists.txt  Cell.cpp  Cell.h  CmmQAlocException.cpp  CmmQAlocException.h  Makefile  MemInitException.cpp  MemInitException.h  MemStorage.cpp  MemStorage.h  MemWrapper.h  TransitDataAllocException.cpp  TransitDataAllocException.h  cmake_install.cmake
test/: CMakeLists.txt  Makefile  Test.cpp  TestShift.cc  a.out  cmake_install.cmake
test/basic/: CMakeLists.txt  Makefile  Test.cpp  TestApp.cpp  TestMonitor.cpp  TestRcver.cpp  TestRcver.h  TestSnder.cpp  TestSnder.h  cmake_install.cmake
test/common/: CMakeLists.txt  InitException.cpp  InitException.h  Makefile  TestAppInterface.cpp  TestAppInterface.h  TestConfig.cpp  TestConfig.h  cmake_install.cmake
test/counter12N/: CMakeLists.txt  Makefile  TestMonitorCnt.cpp  TestSndCnt.cpp  cmake_install.cmake
test/counterN21/: CMakeLists.txt  Makefile  TestMonitorCnt.cpp  TestRcvCnt.cpp  TestSndCnt.cpp  TestSndCnt.h  cmake_install.cmake
test/counterN2N/: CMakeLists.txt  Makefile  TestMonitorCnt.cpp  TestRcvCnt.h  TestSndCnt.cpp  TestSndCnt.h  cmake_install.cmake
test/countercommon/: CMakeLists.txt  Makefile  ReadCounter.cpp  cmake_install.cmake
test/monitortest/: CMakeLists.txt  Makefile  cmake_install.cmake
test/monitortest/monitorchecker/: CMakeLists.txt  FreeListChecker.cpp  FreeListChecker.h  Makefile  cmake_install.cmake
test/monitortest/testrelease/: CMakeLists.txt  Makefile  TestMonitorCnt.cpp  TestRcvCnt.cpp  TestSndCnt.cpp  TestSndCnt.h  cmake_install.cmake
utils/: CMakeLists.txt  Makefile  ShmStore.cpp  ShmStore.h  Trace.cpp  Trace.h  cmake_install.cmake
